DunningNotification/src/objects/Dunning_Notification_Definition__c.object
<CustomObject>
    <fields>
        <fullName>CC_Address__c</fullName>
        <description>CC Email Address</description>
        <inlineHelpText>CC Email Address</inlineHelpText>
        <label>CC Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CRON_Expression__c</fullName>
        <label>CRON Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Email_Template_Name__c</fullName>
        <description>The default email template name for all phases, defined in Static Resources</description>
        <inlineHelpText>The default email template name for all phases, defined in Static Resources</inlineHelpText>
        <label>Default Email Template_Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Subject__c</fullName>
        <description>The default email subject for all dunning phases</description>
        <inlineHelpText>The default email subject for all dunning phases</inlineHelpText>
        <label>Default Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Name__c</fullName>
        <description>The From Name of the email</description>
        <inlineHelpText>The From Name of the email</inlineHelpText>
        <label>From Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reply_to_Address__c</fullName>
        <description>Reply-to Email Address</description>
        <inlineHelpText>Reply-to Email Address</inlineHelpText>
        <label>Reply-to Address</label>
        <type>Email</type>
    </fields>
    <label>Dunning Notification Definition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Default_Subject__c</columns>
        <columns>From_Name__c</columns>
        <columns>CC_Address__c</columns>
        <columns>Reply_to_Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DunningDef-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dunning Notification Definition</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>